--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "devDependencies": {
     "autoprefixer": "^10.0.1",
     "daisyui": "^4.7.2",
+    "eslint": "8.57.0",
+    "eslint-config-next": "14.2.3",
     "postcss": "^8",
     "tailwindcss": "^3.3.0"
   }
