--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@formspree/react": "^2.5.1",
+    "@madzadev/audio-player": "^2.1.13",
     "contentful": "^10.8.8",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.0.1",
+    "sonner": "^1.4.41"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
