--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   },
   "dependencies": {
     "@formspree/react": "^2.5.1",
+    "clsx": "^2.1.1",
     "contentful": "^10.8.8",
+    "framer-motion": "^11.2.10",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "sonner": "^1.4.41",
+    "tailwind-merge": "^2.3.0",
     "use-sound": "^4.0.1"
   },
   "devDependencies": {
